--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,7 +10,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:elevation="@dimen/app_bar_elevation"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorMajor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
