--- a/app/src/main/res/layout/activity_step_counter.xml
+++ b/app/src/main/res/layout/activity_step_counter.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorMajor"
                 android:gravity="center"
                 android:text="@string/sense_it_all"
                 android:textColor="#FFF"
@@ -39,7 +39,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/colorMajor"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:id="@+id/card"
                 android:text="@string/step_counter_test"
                 android:textColor="@color/colorWhiteShade"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorMajorDark"
                 android:textStyle="bold"
                 android:fontFamily="cursive"
                 android:gravity="center"
@@ -99,7 +99,7 @@
                             android:text="Step Counter"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/step_counter"
                             android:layout_toRightOf="@+id/one"/>
@@ -122,7 +122,7 @@
                             android:text="Accuracy"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/accuracy"
                             android:layout_toRightOf="@+id/two"
@@ -145,7 +145,7 @@
                             android:text="Sampling Rate"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/sampling_rate"
                             android:layout_toRightOf="@+id/three"
@@ -168,7 +168,7 @@
                             android:text="Min Delay"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/minimum_delay"
                             android:layout_toRightOf="@+id/four"
@@ -192,7 +192,7 @@
                             android:text="Name"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/name"
                             android:layout_toRightOf="@+id/five"
@@ -216,7 +216,7 @@
                             android:text="Vendor"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/vendor"
                             android:layout_toRightOf="@+id/six"
@@ -240,7 +240,7 @@
                             android:text="Version"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/version"
                             android:layout_toRightOf="@+id/seven"
@@ -264,7 +264,7 @@
                             android:text="Power"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/power"
                             android:layout_toRightOf="@+id/eight"
@@ -288,7 +288,7 @@
                             android:text="Max Delay"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/maximum_delay"
                             android:layout_toRightOf="@+id/nine"
@@ -312,7 +312,7 @@
                             android:text="Resolution"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/resolution"
                             android:layout_toRightOf="@+id/ten"
@@ -335,7 +335,7 @@
                             android:text="Max Range"
                             android:fontFamily="sans-serif-smallcaps"
                             android:textSize="20sp"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorMajorDark"
                             android:padding="5sp"
                             android:id="@+id/maximum_range"
                             android:layout_toRightOf="@+id/eleven"
