--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorAccent">#FF3D00</color>
+
+    <color name="colorMajor">#00BCD4</color>
+    <color name="colorMajorDark">#0083BF</color>
+
     <color name="colorPrimaryLight">#B2EBF2</color>
     <color name="colorPrimaryLightLight">#E1F5FE</color>
-    <color name="colorPrimaryDark">#0083BF</color>
-    <color name="colorAccent">#FF3D00</color>
     <color name="colorAccentDark">#BF360C</color>
     <color name="colorPrimaryDifferent">#FF3D00</color>
     <color name="colorFlashlightShade">#FFECB3</color>
