--- a/app/src/main/res/layout/activity_screen.xml
+++ b/app/src/main/res/layout/activity_screen.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorMajor"
                 android:gravity="center"
                 android:text="@string/sense_it_all"
                 android:textColor="#FFF"
@@ -39,7 +39,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/colorMajor"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:id="@+id/card"
                 android:text="@string/screen"
                 android:textColor="@color/colorWhiteShade"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorMajorDark"
                 android:textStyle="bold"
                 android:fontFamily="cursive"
                 android:gravity="center"
@@ -73,7 +73,7 @@
                 app:cardElevation="@dimen/app_bar_elevation"
                 app:cardCornerRadius="5sp"
                 android:layout_margin="10sp"
-                app:cardBackgroundColor="@color/colorPrimaryDark">
+                app:cardBackgroundColor="@color/colorMajorDark">
 
                 <ScrollView
                     android:layout_width="match_parent"
